performance at image scaling

--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -13,5 +13,6 @@
 	<classpathentry kind="lib" path="lib/jackson-core-lgpl-1.9.9.jar"/>
 	<classpathentry kind="lib" path="lib/jackson-mapper-lgpl-1.9.9.jar"/>
 	<classpathentry kind="lib" path="lib/objectdb.jar"/>
+	<classpathentry kind="lib" path="lib/Scaling-bin.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
