added proxy support do httpclient added appbundler added genre to movie editor

--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -35,7 +35,7 @@
 	</target>
 
 	<target name='package-app' depends='create_run_jar'>
-		<taskdef name='appbundler' classname='com.joshondesign.appbundler.BundlerTask' classpath='build/classes;lib/XMLLib.jar' />
+		<taskdef name='appbundler' classname='com.joshondesign.appbundler.BundlerTask' classpath='AppBundler/classes;AppBundler/XMLLib.jar' />
 		<appbundler bundle="bundle.xml" target="win" destdir="dist" libdir="build/lib;lib;build" />
 	</target>
 
