added some logging

--- a/tinyMediaManager/src/org/tinymediamanager/log4j.conf
+++ b/tinyMediaManager/src/org/tinymediamanager/log4j.conf
@@ -1,6 +1,7 @@
 # define the root logger with two appenders writing to console and file
 log4j.rootLogger = WARN, CONSOLE, FILE
 log4j.logger.org.tinymediamanager=DEBUG
+log4j.logger.com.moviejukebox.themoviedb=ERROR
 
 # CONSOLE logger
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
