--- a/tinyMediaManager/src/org/tinymediamanager/log4j.conf
+++ b/tinyMediaManager/src/org/tinymediamanager/log4j.conf
@@ -13,8 +13,8 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 # FILE logger
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
 log4j.appender.FILE.File=log/tmm.log
-log4j.appender.FILE.MaxFileSize=500KB
-# Keep one backup file
-log4j.appender.FILE.MaxBackupIndex=1
+log4j.appender.FILE.MaxFileSize=1024KB
+# Keep two backup file
+log4j.appender.FILE.MaxBackupIndex=2
 log4j.appender.FILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.FILE.layout.ConversionPattern=%p %t %c - %m%n
