--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -35,9 +35,14 @@
 	</target>
 
 	<target name='package-app' depends='create_run_jar'>
-		<taskdef name='appbundler' classname='com.joshondesign.appbundler.BundlerTask' classpath='AppBundler/classes;AppBundler/XMLLib.jar;lib/commons-lang3-3.1.jar' />
+		<!-- <taskdef name='appbundler' classname='com.joshondesign.appbundler.BundlerTask' classpath='AppBundler/classes;AppBundler/XMLLib.jar;lib/commons-lang3-3.1.jar' /> -->
+		
+		<!-- Mac OSX -->
+		<!--<appbundler bundle="bundle.xml" target="mac" destdir="dist" libdir="build/lib;lib;build;AppBundler" /> -->
+		
+		
 		<!-- Windows -->
-		<!--<appbundler bundle="bundle.xml" target="win" destdir="dist" libdir="build/lib;lib;build" />-->
+		<!--<appbundler bundle="bundle.xml" target="win" destdir="dist" libdir="build/lib;lib;build" /> -->
 		<delete dir="dist/win/lib" />
 		<delete dir="dist/win" />
 		<mkdir dir="dist/win" />
@@ -46,11 +51,12 @@
 		  <fileset dir="build/lib" includes="*" />
 		</copy>
 		<copy file="build/tmm.jar" todir="dist/win" />
+		<copy file="AppBundler/getdown.jar" todir="dist/win" />
+		<copy file="AppBundler/getdown.txt" todir="dist/win" />
+		<copy file="AppBundler/digest.txt" todir="dist/win" />
+		<copy file="AppBundler/LICENSE" todir="dist/win" />
 		<copy file="AppBundler/tinyMediaManager.bat" todir="dist/win" />
-		
-		<!-- Mac OSX -->
-		<appbundler bundle="bundle.xml" target="mac" destdir="dist" libdir="build/lib;lib;build" />
-		
+				
 		<!-- Linux -->
 		<delete dir="dist/linux/lib" />
     <delete dir="dist/linux" />
@@ -60,6 +66,10 @@
       <fileset dir="build/lib" includes="*" />
     </copy>
 		<copy file="build/tmm.jar" todir="dist/linux" />
+		<copy file="AppBundler/getdown.jar" todir="dist/linux" />
+		<copy file="AppBundler/getdown.txt" todir="dist/linux" />
+		<copy file="AppBundler/digest.txt" todir="dist/linux" />
+		<copy file="AppBundler/LICENSE" todir="dist/linux" />
 		<copy file="AppBundler/tinyMediaManager.sh" todir="dist/linux" />
 		<chmod file="dist/linux/tinyMediaManager.sh" perm="ugo+rx"/>
 	</target>
