--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -49,28 +49,60 @@
 	</target>
 
 	<target name='package-app' depends='create_run_jar'>
-		<!-- <taskdef name='appbundler' classname='com.joshondesign.appbundler.BundlerTask' classpath='AppBundler/classes;AppBundler/XMLLib.jar;lib/commons-lang3-3.1.jar' /> -->
+    <!-- getdown -->
+    <delete dir="dist/getdown/lib" />
+    <delete dir="dist/getdown" />
+    <mkdir dir="dist/getdown" />
+    <mkdir dir="dist/getdown/lib" />
+    <copy todir="dist/getdown/lib">
+      <fileset dir="build/lib" includes="*" />
+    </copy>
+    <copy file="build/tmm.jar" todir="dist/getdown" />
+    <copy file="build/tmm.properties" todir="dist/getdown" />
+    <copy file="AppBundler/getdown.txt" todir="dist/getdown" />
+    <copy file="AppBundler/tmm.png" todir="dist/getdown" />
+    <copy file="AppBundler/splashscreen.png" todir="dist/getdown" />
+    <taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask"
+             classpath="AppBundler/getdown-tools-1.2.jar"/>
+    <digest appdir="dist/getdown"/>
 		
 		<!-- Mac OSX -->
-		<!--<appbundler bundle="bundle.xml" target="mac" destdir="dist" libdir="build/lib;lib;build;AppBundler" /> -->
-		
+		<taskdef name="jarbundler" classname="net.sourceforge.jarbundler.JarBundler" classpath="AppBundler/jarbundler-2.2.0.jar" />
+		<jarbundler dir="dist/mac" name="tinyMediaManager" mainclass="com.threerings.getdown.launcher.Getdown" arguments=".">
+      <jarfileset dir="AppBundler">
+        <include name="**/getdown.jar" />
+      	<include name="**/getdown.txt" />
+      	<include name="**/splashscreen.png" />
+      </jarfileset>
+
+			<jarfileset dir="build">
+			    <include name="**/*" />
+			</jarfileset>
+			
+      <jarfileset dir="dist/getdown/">
+          <include name="**/digest.txt" />
+      </jarfileset>			
+
+		</jarbundler>		
 		
 		<!-- Windows -->
-		<!--<appbundler bundle="bundle.xml" target="win" destdir="dist" libdir="build/lib;lib;build" /> -->
+		<property name="launch4j.dir" location="AppBundler/launch4j" />
+		<taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask"  classpath="${launch4j.dir}/launch4j.jar
+		        :${launch4j.dir}/lib/xstream.jar" />
 		<delete dir="dist/win/lib" />
 		<delete dir="dist/win" />
 		<mkdir dir="dist/win" />
 		<mkdir dir="dist/win/lib" />
+    <launch4j configFile="AppBundler/launch4j.xml" />
 		<copy todir="dist/win/lib">
 		  <fileset dir="build/lib" includes="*" />
 		</copy>
 		<copy file="build/tmm.jar" todir="dist/win" />
+		<copy file="build/tmm.properties" todir="dist/getdown" />
 		<copy file="AppBundler/getdown.jar" todir="dist/win" />
 		<copy file="AppBundler/getdown.txt" todir="dist/win" />
 		<copy file="AppBundler/digest.txt" todir="dist/win" />
 		<copy file="AppBundler/LICENSE" todir="dist/win" />
-		<copy file="AppBundler/tinyMediaManager.bat" todir="dist/win" />
-		<copy file="AppBundler/tmm.png" todir="dist/win" />
 		<copy file="AppBundler/splashscreen.png" todir="dist/win" />
 				
 		<!-- Linux -->
@@ -90,24 +122,7 @@
 		<chmod file="dist/linux/tinyMediaManager.sh" perm="ugo+rx"/>
 		<copy file="AppBundler/tmm.png" todir="dist/linux" />
 		<copy file="AppBundler/splashscreen.png" todir="dist/linux" />
-		
-		<!-- getdown -->
-		<delete dir="dist/getdown/lib" />
-		<delete dir="dist/getdown" />
-		<mkdir dir="dist/getdown" />
-		<mkdir dir="dist/getdown/lib" />
-		<copy todir="dist/getdown/lib">
-		  <fileset dir="build/lib" includes="*" />
-		</copy>
-		<copy file="build/tmm.jar" todir="dist/getdown" />
-		<copy file="build/tmm.properties" todir="dist/getdown" />
-		<copy file="AppBundler/getdown.txt" todir="dist/getdown" />
-		<copy file="AppBundler/tmm.png" todir="dist/getdown" />
-		<copy file="AppBundler/splashscreen.png" todir="dist/getdown" />
-		<taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask"
-		         classpath="AppBundler/getdown-tools-1.2.jar"/>
-		<digest appdir="dist/getdown"/>
-		
+				
 	</target>
 	
 </project>
