--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -15,32 +15,32 @@
 		<jar destfile="build/tmm.jar">
 			<manifest>
 				<attribute name="Main-Class" value="org.tinymediamanager.TinyMediaManager" />
-				<attribute name="Class-Path" value=". lib/commons-lang3-3.1.jar lib/log4j-1.2.16.jar lib/themoviedbapi-3.2-SNAPSHOT-r169.jar lib/beansbinding-1.2.1.jar lib/jdom.jar lib/commons-codec-1.6.jar lib/commons-io-2.1.jar lib/jackson-core-lgpl-1.9.9.jar lib/jackson-mapper-lgpl-1.9.9.jar lib/objectdb.jar lib/Scaling-bin.jar lib/thetvdbapi-1.4-SNAPSHOT-r123.jar lib/forms-1.3.0.jar lib/JSplitButton_1.2.jar lib/commons-logging-1.1.1.jar lib/fluent-hc-4.2.1.jar lib/httpclient-4.2.1.jar lib/httpclient-cache-4.2.1.jar lib/httpcore-4.2.1.jar lib/httpmime-4.2.1.jar" />
+				<attribute name="Class-Path" value=". lib/commons-lang3.jar lib/log4j.jar lib/themoviedbapi.jar lib/beansbinding.jar lib/jdom.jar lib/commons-codec.jar lib/commons-io.jar lib/jackson-core-lgpl.jar lib/jackson-mapper-lgpl.jar lib/objectdb.jar lib/Scaling-bin.jar lib/thetvdbapi.jar lib/forms.jar lib/JSplitButton.jar lib/commons-logging.jar lib/httpclient.jar lib/httpclient-cache.jar lib/httpcore.jar lib/httpmime.jar lib/JTattoo.jar" />
 				<attribute name="SplashScreen-Image" value="org/tinymediamanager/ui/images/splashscreen.png" />
 			</manifest>
 			<fileset dir="bin" />
 		</jar>
 		<!-- <jar destfile="build/lib/resources.jar" basedir="resources" includes="*/**" /> -->
-		<copy file="lib/commons-lang3-3.1.jar" todir="build/lib" />
-		<copy file="lib/log4j-1.2.16.jar" todir="build/lib" />
-		<copy file="lib/themoviedbapi-3.2-SNAPSHOT-r169.jar" todir="build/lib" />
-		<copy file="lib/beansbinding-1.2.1.jar" todir="build/lib" />
+		<copy file="lib/commons-lang3.jar" todir="build/lib" />
+		<copy file="lib/log4j.jar" todir="build/lib" />
+		<copy file="lib/themoviedbapi.jar" todir="build/lib" />
+		<copy file="lib/beansbinding.jar" todir="build/lib" />
 		<copy file="lib/jdom.jar" todir="build/lib" />
-		<copy file="lib/commons-codec-1.6.jar" todir="build/lib" />
-		<copy file="lib/commons-io-2.1.jar" todir="build/lib" />
-		<copy file="lib/jackson-core-lgpl-1.9.9.jar" todir="build/lib" />
-		<copy file="lib/jackson-mapper-lgpl-1.9.9.jar" todir="build/lib" />
+		<copy file="lib/commons-codec.jar" todir="build/lib" />
+		<copy file="lib/commons-io.jar" todir="build/lib" />
+		<copy file="lib/jackson-core-lgpl.jar" todir="build/lib" />
+		<copy file="lib/jackson-mapper-lgpl.jar" todir="build/lib" />
 		<copy file="lib/objectdb.jar" todir="build/lib" />
 		<copy file="lib/Scaling-bin.jar" todir="build/lib" />
-		<copy file="lib/thetvdbapi-1.4-SNAPSHOT-r123.jar" todir="build/lib" />
-		<copy file="lib/forms-1.3.0.jar" todir="build/lib" />
-		<copy file="lib/JSplitButton_1.2.jar" todir="build/lib" />
-		<copy file="lib/commons-logging-1.1.1.jar" todir="build/lib" />
-		<copy file="lib/fluent-hc-4.2.1.jar" todir="build/lib" />
-		<copy file="lib/httpclient-4.2.1.jar" todir="build/lib" />
-		<copy file="lib/httpclient-cache-4.2.1.jar" todir="build/lib" />
-		<copy file="lib/httpcore-4.2.1.jar" todir="build/lib" />
-		<copy file="lib/httpmime-4.2.1.jar" todir="build/lib" />
+		<copy file="lib/thetvdbapi.jar" todir="build/lib" />
+		<copy file="lib/forms.jar" todir="build/lib" />
+		<copy file="lib/JSplitButton.jar" todir="build/lib" />
+		<copy file="lib/commons-logging.jar" todir="build/lib" />
+		<copy file="lib/httpclient.jar" todir="build/lib" />
+		<copy file="lib/httpclient-cache.jar" todir="build/lib" />
+		<copy file="lib/httpcore.jar" todir="build/lib" />
+		<copy file="lib/httpmime.jar" todir="build/lib" />
+		<copy file="lib/JTattoo.jar" todir="build/lib" />
 		
 		<!-- buildinfo -->
     <propertyfile file="build/version"
@@ -103,7 +103,7 @@
 		  <fileset dir="build/lib" includes="*" />
 		</copy>
 		<copy file="build/tmm.jar" todir="dist/win" />
-		<copy file="build/tmm.properties" todir="dist/getdown" />
+		<copy file="build/version" todir="dist/getdown" />
 		<copy file="AppBundler/getdown.jar" todir="dist/win" />
 		<copy file="AppBundler/getdown.txt" todir="dist/win" />
 		<copy file="AppBundler/digest.txt" todir="dist/win" />
