started with XMBC scraper parser reworked cachedUrl

--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -4,7 +4,7 @@
 	<!--ANT 1.7 is required                                        -->
 	
 	<!-- software revision number -->
-	<property name="version" value="Alpha2"/>
+	<property name="version" value="Beta"/>
 	<buildnumber file="buildnumber.txt" />
 	
 	<target name="create_run_jar">
@@ -71,7 +71,7 @@
 		<!-- Mac OSX -->
 		<taskdef name="jarbundler" classname="net.sourceforge.jarbundler.JarBundler" classpath="AppBundler/jarbundler-2.2.0.jar" />
 		<jarbundler dir="dist/mac" name="tinyMediaManager" icon="AppBundler/tmm.icns" mainclass="com.threerings.getdown.launcher.Getdown" arguments="." 
-      bundleid="org.tinyMediaManager.tinymediamanager" infostring="tinyMediaManager" jvmversion="1.6+" shortname="tMM" workingdirectory="$JAVAROOT" >
+      bundleid="org.tinyMediaManager.tinymediamanager" infostring="tinyMediaManager" jvmversion="1.6+" shortname="tMM" workingdirectory="$JAVAROOT" vmoptions="-Dapple.awt.graphics.UseQuartz=true">
       <jarfileset dir="AppBundler">
         <include name="**/getdown.jar" />
       	<include name="**/getdown.txt" />
@@ -103,7 +103,7 @@
 		  <fileset dir="build/lib" includes="*" />
 		</copy>
 		<copy file="build/tmm.jar" todir="dist/win" />
-		<copy file="build/version" todir="dist/getdown" />
+		<copy file="build/version" todir="dist/win" />
 		<copy file="AppBundler/getdown.jar" todir="dist/win" />
 		<copy file="AppBundler/getdown.txt" todir="dist/win" />
 		<copy file="AppBundler/digest.txt" todir="dist/win" />
@@ -120,6 +120,7 @@
       <fileset dir="build/lib" includes="*" />
     </copy>
 		<copy file="build/tmm.jar" todir="dist/linux" />
+		<copy file="build/version" todir="dist/linux" />
 		<copy file="AppBundler/getdown.jar" todir="dist/linux" />
 		<copy file="AppBundler/getdown.txt" todir="dist/linux" />
 		<copy file="AppBundler/digest.txt" todir="dist/linux" />
