--- a/tinyMediaManager/src/org/tinymediamanager/log4j.conf
+++ b/tinyMediaManager/src/org/tinymediamanager/log4j.conf
@@ -2,6 +2,8 @@
 log4j.rootLogger = WARN, CONSOLE, FILE
 log4j.logger.org.tinymediamanager=DEBUG
 log4j.logger.com.moviejukebox.themoviedb=ERROR
+log4j.logger.org.tinymediamanager.scraper.xbmc=WARN
+log4j.logger.org.tinymediamanager.scraper.util.CachedUrl=WARN
 
 # CONSOLE logger
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
