broken commit, just to save changes!
started to implement the imdb scraper;
did some debugging with the xbmc scraper

--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -22,5 +22,6 @@
 	<classpathentry kind="lib" path="lib/themoviedbapi.jar"/>
 	<classpathentry kind="lib" path="lib/thetvdbapi.jar"/>
 	<classpathentry kind="lib" path="lib/JTattoo.jar"/>
+	<classpathentry kind="lib" path="lib/htmlparser.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
