--- a/tinyMediaManager/objectdb.conf
+++ b/tinyMediaManager/objectdb.conf
@@ -7,7 +7,7 @@
 		<network inactivity-timeout="0" />
 		<url-history size="50" user="true" password="true" />
 		<log path="log/objectdb" max="8mb" stdout="false" stderr="false" />
-		<log-archive path="" retain="10" />
+		<log-archive path="log/objectdb" retain="10" />
 		<logger name="*" level="info" />
 	</general>
 
