--- a/tinyMediaManager/objectdb.conf
+++ b/tinyMediaManager/objectdb.conf
@@ -6,8 +6,8 @@
 		<temp path="$temp" threshold="64mb" />
 		<network inactivity-timeout="0" />
 		<url-history size="50" user="true" password="true" />
-		<log path="log/objectdb" max="8mb" stdout="false" stderr="false" />
-		<log-archive path="log/objectdb" retain="10" />
+		<log path="" max="8mb" stdout="false" stderr="false" />
+		<log-archive path="" retain="10" />
 		<logger name="*" level="info" />
 	</general>
 
