--- a/tinyMediaManager/src/org/tinymediamanager/log4j.conf
+++ b/tinyMediaManager/src/org/tinymediamanager/log4j.conf
@@ -2,8 +2,8 @@
 log4j.rootLogger = WARN, CONSOLE, FILE
 log4j.logger.org.tinymediamanager=DEBUG
 log4j.logger.com.moviejukebox.themoviedb=ERROR
-# log4j.logger.org.tinymediamanager.scraper.xbmc=WARN
-# log4j.logger.org.tinymediamanager.scraper.util.CachedUrl=WARN
+#log4j.logger.org.tinymediamanager.scraper.xbmc=WARN
+log4j.logger.org.tinymediamanager.scraper.util.CachedUrl=WARN
 
 # CONSOLE logger
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
@@ -14,7 +14,7 @@ log4j.appender.CONSOLE.layout.ConversionPattern=%5p [%t] (%F:%L) - %m%n
 
 # FILE logger
 log4j.appender.FILE=org.apache.log4j.RollingFileAppender
-log4j.appender.FILE.File=log/tmm.log
+log4j.appender.FILE.File=logs/tmm.log
 log4j.appender.FILE.MaxFileSize=1024KB
 
 # Keep two backup file
