tried to include glazedlists for the movie table -> NON WORKING VERSION

--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -25,5 +25,6 @@
 	<classpathentry kind="lib" path="lib/jsoup.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
+	<classpathentry kind="lib" path="lib/glazedlists.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
