--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -27,5 +27,7 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="lib/commons-logging.jar"/>
 	<classpathentry kind="lib" path="lib/glazedlists.jar"/>
+	<classpathentry kind="lib" path="lib/l2fprod-common-buttonbar.jar"/>
+	<classpathentry kind="lib" path="lib/l2fprod-common-shared.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
