finished trailer changed settings dialog changed Mac OSX .app added movie tags changed build of resources.jar

--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -18,12 +18,11 @@
 		<jar destfile="build/tmm.jar">
 			<manifest>
 				<attribute name="Main-Class" value="org.tinymediamanager.TinyMediaManager" />
-				<attribute name="Class-Path" value=". lib/commons-lang3.jar lib/log4j.jar lib/themoviedbapi.jar lib/beansbinding.jar lib/jdom.jar lib/commons-codec.jar lib/commons-io.jar lib/jackson-core-lgpl.jar lib/jackson-mapper-lgpl.jar lib/objectdb.jar lib/Scaling-bin.jar lib/thetvdbapi.jar lib/forms.jar lib/JSplitButton.jar lib/commons-logging.jar lib/httpclient.jar lib/httpclient-cache.jar lib/httpcore.jar lib/httpmime.jar lib/JTattoo.jar lib/jsoup.jar lib/glazedlists.jar lib/resource.jar" />
+				<attribute name="Class-Path" value=". lib/commons-lang3.jar lib/log4j.jar lib/themoviedbapi.jar lib/beansbinding.jar lib/jdom.jar lib/commons-codec.jar lib/commons-io.jar lib/jackson-core-lgpl.jar lib/jackson-mapper-lgpl.jar lib/objectdb.jar lib/Scaling-bin.jar lib/thetvdbapi.jar lib/forms.jar lib/JSplitButton.jar lib/commons-logging.jar lib/httpclient.jar lib/httpclient-cache.jar lib/httpcore.jar lib/httpmime.jar lib/JTattoo.jar lib/jsoup.jar lib/glazedlists.jar lib/resources.jar lib/l2fprod-common-buttonbar.jar lib/l2fprod-common-shared.jar" />
 				<attribute name="SplashScreen-Image" value="org/tinymediamanager/ui/images/splashscreen.png" />
 			</manifest>
 			<fileset dir="bin" />
 		</jar>
-		<jar destfile="build/lib/resources.jar" basedir="resources" includes="*/**" />
 		<copy file="lib/commons-lang3.jar" todir="build/lib" />
 		<copy file="lib/log4j.jar" todir="build/lib" />
 		<copy file="lib/themoviedbapi.jar" todir="build/lib" />
@@ -46,6 +45,9 @@
 		<copy file="lib/JTattoo.jar" todir="build/lib" />
 		<copy file="lib/jsoup.jar" todir="build/lib" />
 		<copy file="lib/glazedlists.jar" todir="build/lib" />
+		<copy file="lib/l2fprod-common-buttonbar.jar" todir="build/lib" />
+		<copy file="lib/l2fprod-common-shared.jar" todir="build/lib" />
+		<copy file="lib/resources.jar" todir="build/lib" />
 		
 		<!-- buildinfo -->
     <propertyfile file="build/version"
@@ -101,7 +103,11 @@
 
 		</jarbundler>		
 		<copy file ="AppBundler/JavaApplicationStub" todir="dist/mac/tinyMediaManager.app/Contents/MacOS" />
-		<zip destfile="dist/tmm_${version}_r${build.number}_mac.zip" basedir="dist/mac"/>
+		<chmod file="dist/mac/tinyMediaManager.app/Contents/MacOS/JavaApplicationStub" perm="ugo+rx"/>
+		<!-- <zip destfile="dist/tmm_${version}_r${build.number}_mac.zip" basedir="dist/mac"/> -->
+		<zip destfile="dist/tmm_${version}_r${build.number}_mac.zip" level="9">
+		    <zipfileset filemode="755" dir="dist/mac" includes="tinyMediaManager.app/**/*" />
+		</zip>
 		
 		<!-- Windows -->
 		<property name="launch4j.dir" location="AppBundler/launch4j" />
