--- a/tinyMediaManager/.classpath
+++ b/tinyMediaManager/.classpath
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="resources"/>
 	<classpathentry kind="src" path="test"/>
 	<classpathentry kind="lib" path="lib/jdom.jar"/>
 	<classpathentry kind="lib" path="lib/objectdb.jar"/>
@@ -29,5 +28,6 @@
 	<classpathentry kind="lib" path="lib/glazedlists.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-buttonbar.jar"/>
 	<classpathentry kind="lib" path="lib/l2fprod-common-shared.jar"/>
+	<classpathentry kind="lib" path="lib/resources.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
