fixed storing of dialog positions/sizes fixed imdb scraper with runtime = 0 added email to feedback form added migration of Trailer -> MediaTrailer in database

--- a/tinyMediaManager/objectdb.conf
+++ b/tinyMediaManager/objectdb.conf
@@ -30,6 +30,9 @@
 	</entities>
 
 	<schema>
+	  <package name="org.tinymediamanager.scraper">
+      <class name="Trailer" new-name="MediaTrailer" />
+    </package>
 	</schema>
 
 	<server>
