--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -103,92 +103,53 @@
     </target>
 
     <target name='package-app' depends='create_tmm_jar'>
+        <!-- default files -->
+        <copy file="objectdb.conf" todir="build" />
+        <copy file="AppBundler/getdown.jar" todir="build" />
+        <copy file="AppBundler/getdown.txt" todir="build" />
+        <copy file="AppBundler/LICENSE" todir="build" />
+        <copy file="AppBundler/splashscreen.png" todir="build" />
+        <copy file="AppBundler/tmm.png" todir="build" />
 
-        <!-- getdown -->
-        <mkdir dir="dist/getdown" />
-        <mkdir dir="dist/getdown/lib" />
-        <copy todir="dist/getdown/lib">
-            <fileset dir="build/lib" includes="*" />
-        </copy>
-        <copy file="build/tmm.jar" todir="dist/getdown" />
-        <copy file="build/version" todir="dist/getdown" />
-        <copy file="objectdb.conf" todir="dist/getdown" />
-        <copy file="AppBundler/getdown.txt" todir="dist/getdown" />
-        <copy file="AppBundler/tmm.png" todir="dist/getdown" />
-        <copy file="AppBundler/splashscreen.png" todir="dist/getdown" />
-        <taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask" classpath="AppBundler/getdown-tools-1.2.jar" />
-        <digest appdir="dist/getdown" />
+        <!-- create checksum file -->
+        <taskdef name="digest" classname="com.threerings.getdown.tools.DigesterTask" 
+                 classpath="AppBundler/getdown-tools-1.2.jar" />
+        <digest appdir="build" />
 
         <!-- Mac OSX -->
         <mkdir dir="dist/mac" />
         <taskdef name="jarbundler" classname="net.sourceforge.jarbundler.JarBundler" classpath="AppBundler/jarbundler-2.2.0.jar" />
-        <jarbundler dir="dist/mac" name="tinyMediaManager" icon="AppBundler/tmm.icns" mainclass="com.threerings.getdown.launcher.Getdown" arguments="." bundleid="org.tinyMediaManager.tinymediamanager" infostring="tinyMediaManager" jvmversion="1.6+" shortname="tMM" workingdirectory="$JAVAROOT" vmoptions="-Dapple.awt.graphics.UseQuartz=true">
-            <!--      <jarfileset dir=".">
-              <include name="**/objectdb.conf" />
-            </jarfileset> -->
-
-            <jarfileset dir="AppBundler">
-                <include name="**/getdown.jar" />
-                <include name="**/getdown.txt" />
-                <include name="**/splashscreen.png" />
-                <include name="**/tmm.png" />
-            </jarfileset>
-
+        <jarbundler dir="dist/mac" name="tinyMediaManager" icon="AppBundler/tmm.icns" 
+                    mainclass="com.threerings.getdown.launcher.Getdown" arguments="." 
+                    bundleid="org.tinyMediaManager.tinymediamanager" infostring="tinyMediaManager" 
+                    jvmversion="1.6+" shortname="tMM" workingdirectory="$JAVAROOT" 
+                    vmoptions="-Dapple.awt.graphics.UseQuartz=true">
             <jarfileset dir="build">
                 <include name="**/*" />
             </jarfileset>
-
-            <jarfileset dir="dist/getdown/">
-                <include name="**/digest.txt" />
-            </jarfileset>
-
         </jarbundler>
         <copy file="AppBundler/JavaApplicationStub" todir="dist/mac/tinyMediaManager.app/Contents/MacOS" />
         <chmod file="dist/mac/tinyMediaManager.app/Contents/MacOS/JavaApplicationStub" perm="ugo+rx" />
-        <!-- <zip destfile="dist/tmm_${version}_r${svn.info.revision}_mac.zip" basedir="dist/mac"/> -->
         <zip destfile="dist/tmm_${version}_r${svn.info.revision}_mac.zip" level="9">
             <zipfileset filemode="755" dir="dist/mac" includes="tinyMediaManager.app/**/*" />
         </zip>
 
         <!-- Windows -->
-        <property name="launch4j.dir" location="AppBundler/launch4j" />
-        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" classpath="${launch4j.dir}/launch4j.jar
-                :${launch4j.dir}/xstream.jar" />
-        <mkdir dir="dist/win" />
-        <mkdir dir="dist/win/lib" />
-        <launch4j configFile="AppBundler/launch4j.xml" />
-        <copy todir="dist/win/lib">
-            <fileset dir="build/lib" includes="*" />
-        </copy>
-        <copy file="build/tmm.jar" todir="dist/win" />
-        <copy file="build/version" todir="dist/win" />
-        <copy file="objectdb.conf" todir="dist/win" />
-        <copy file="AppBundler/getdown.jar" todir="dist/win" />
-        <copy file="AppBundler/getdown.txt" todir="dist/win" />
-        <copy file="dist/getdown/digest.txt" todir="dist/win" />
-        <copy file="AppBundler/LICENSE" todir="dist/win" />
-        <copy file="AppBundler/splashscreen.png" todir="dist/win" />
-        <copy file="AppBundler/tmm.png" todir="dist/win" />
-        <zip destfile="dist/tmm_${version}_r${svn.info.revision}_win.zip" basedir="dist/win" />
+        <taskdef name="launch4j" classname="net.sf.launch4j.ant.Launch4jTask" 
+                 classpath="AppBundler/launch4j/launch4j.jar:AppBundler/launch4j/xstream.jar" />
+        <launch4j configFile="AppBundler/launch4j.xml" txtProductVersion="${version}_r${svn.info.revision}"/>
+        <zip destfile="dist/tmm_${version}_r${svn.info.revision}_win.zip" level="9">
+            <zipfileset filemode="755" dir="build" />
+            <zipfileset filemode="755" dir="dist" includes="*.exe"/>
+        </zip>
 
         <!-- Linux -->
-        <mkdir dir="dist/linux" />
-        <mkdir dir="dist/linux/lib" />
-        <copy todir="dist/linux/lib">
-            <fileset dir="build/lib" includes="*" />
-        </copy>
-        <copy file="build/tmm.jar" todir="dist/linux" />
-        <copy file="build/version" todir="dist/linux" />
-        <copy file="objectdb.conf" todir="dist/linux" />
-        <copy file="AppBundler/getdown.jar" todir="dist/linux" />
-        <copy file="AppBundler/getdown.txt" todir="dist/linux" />
-        <copy file="dist/getdown/digest.txt" todir="dist/linux" />
-        <copy file="AppBundler/LICENSE" todir="dist/linux" />
-        <copy file="AppBundler/tinyMediaManager.sh" todir="dist/linux" />
-        <chmod file="dist/linux/tinyMediaManager.sh" perm="ugo+rx" />
-        <copy file="AppBundler/tmm.png" todir="dist/linux" />
-        <copy file="AppBundler/splashscreen.png" todir="dist/linux" />
-        <tar destfile="dist/tmm_${version}_r${svn.info.revision}_linux.tar" basedir="dist/linux" />
+        <copy file="AppBundler/tinyMediaManager.sh" todir="dist" />
+        <chmod file="dist/tinyMediaManager.sh" perm="ugo+rx" />
+        <tar destfile="dist/tmm_${version}_r${svn.info.revision}_linux.tar" >
+            <tarfileset dir="build"/>
+            <tarfileset dir="dist" includes="*.sh"/>
+        </tar>
         <gzip destfile="dist/tmm_${version}_r${svn.info.revision}_linux.tar.gz" src="dist/tmm_${version}_r${svn.info.revision}_linux.tar" />
     </target>
 
