disable unit testing (for now ;)

--- a/tinyMediaManager/build.xml
+++ b/tinyMediaManager/build.xml
@@ -167,7 +167,7 @@
             <property name="source" value="src"/>
             <property name="classpath" refid="classpath.default"/>
             <property name="${build.dir}" value="${bin.dir}"/>
-            <property name="testsource" value="test"/>
+            <!--property name="testsource" value="test"/-->
         </ant>
     </target>
 </project>
